solc_ossfuzz_seed_corpus/test_sol/test_a595714bcc6f0feca4b2a4d5c8c2aff09a5f86b1724441487efd9e1dbd6910f2_d680453adc7340af868cf2fadfbb06a0893ef2eb_sol.sol
==== Source:  ====

==== Source: su0.sol ====
library L0 {
  modifier m0(string memory i0,bool i1) 
  {
    _;
  }
  function f0() public    returns(int104 o0,function (function (function (bool[] memory) external   returns (uint80, bytes memory), int88[2] memory) external   returns (int24), uint24) internal   returns (uint152) o1)
  {
  }
  event ev0(int80  ep0, function (bool, address payable) external   returns (string memory)  ep1);
  using L0 for *;
}
pragma solidity >= 0.0.0;
using L0 for uint;
using L0 for uint;
// ----
// TypeError 4103: (su0.sol:113-285): Internal type is not allowed for public or external functions.
